tests/ui/duplicate/duplicate-check-macro-exports.stderr
error[E0255]: the name `panic` is defined multiple times
  --> $DIR/duplicate-check-macro-exports.rs:4:1
   |
LL | pub use std::panic;
   |         ---------- previous import of the macro `panic` here
...
LL | macro_rules! panic { () => {} }
   | ^^^^^^^^^^^^^^^^^^ `panic` redefined here
   |
   = note: `panic` must be defined only once in the macro namespace of this module
help: you can use `as` to change the binding name of the import
   |
LL | pub use std::panic as other_panic;
   |                    ++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0255`.
